<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#80000000">

    <RelativeLayout
        android:id="@+id/popup_dismiss"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:id="@+id/popup_create"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/photo_bg"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:gravity="center"
                    android:text="@string/photo_title"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="10sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/black30" />

                <TextView
                    android:id="@+id/photograph"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:gravity="center"
                    android:text="@string/photograph"
                    android:textColor="@color/apple_blue"
                    android:textSize="15sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/black30" />

                <TextView
                    android:id="@+id/photo_select"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:gravity="center"
                    android:text="@string/photo_select"
                    android:textColor="@color/apple_blue"
                    android:textSize="15sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/cancel"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/photo_bg"
                android:gravity="center"
                android:textStyle="bold"
                android:text="@string/cancel"
                android:textColor="@color/apple_blue"
                android:textSize="15sp" />

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>