<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#80000000">

    <LinearLayout
        android:id="@+id/popup_dismiss"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:id="@+id/popup_create"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/photo_bg"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:gravity="center"
                    android:text="@string/pay_title"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="10sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/black30" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="42dp"
                        android:layout_height="42dp"
                        android:padding="5dp"
                        android:src="@mipmap/wechat_icon" />

                    <TextView
                        android:id="@+id/wechatPay"
                        android:layout_width="wrap_content"
                        android:layout_height="42dp"
                        android:layout_centerInParent="true"
                        android:gravity="center"
                        android:text="@string/wechatpay"
                        android:textColor="#6eb344"
                        android:textSize="15sp" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/black30" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="42dp"
                        android:layout_height="42dp"
                        android:padding="11dp"
                        android:src="@mipmap/alipay_icon" />

                    <TextView
                        android:id="@+id/alipay"
                        android:layout_width="wrap_content"
                        android:layout_height="42dp"
                        android:gravity="center"
                        android:text="@string/alipay"
                        android:textColor="#00aaee"
                        android:textSize="15sp" />
                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/cancel"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/photo_bg"
                android:gravity="center"
                android:text="@string/cancel"
                android:textColor="@android:color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
