<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#80000000">

    <RelativeLayout
        android:id="@+id/sex_popup_dismiss"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/popup_create"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/photo_bg"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center_vertical"
                    android:text="@string/sex"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <LinearLayout
                    android:id="@+id/sex_boy"
                    android:layout_width="match_parent"
                    android:background="@drawable/white_to_gray_selection"
                    android:layout_height="42dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:layout_marginLeft="10dp"
                        android:text="@string/boy"
                        android:textColor="@android:color/black"
                        android:textSize="15sp" />

                    <RadioButton
                        android:id="@+id/sex_boy_radio"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="#ccc" />

                <LinearLayout
                    android:id="@+id/sex_girl"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:background="@drawable/white_to_gray_selection">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:layout_marginLeft="10dp"
                        android:text="@string/girl"
                        android:textColor="@android:color/black"
                        android:textSize="15sp" />

                    <RadioButton
                        android:id="@+id/sex_girl_radio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>